--- a/style.css
+++ b/style.css
@@ -8,6 +8,7 @@
 
 @page {
     size: A4;
+    margin: 20mm;
   }
 
 a {
@@ -44,11 +45,15 @@ img {
 }
 
 
-.container {
-    padding:  12px ;
-    display: flex;
-}
 
+
+
+.container {
+  max-width: 190mm;
+  margin: 0 auto;
+  padding: 12px;
+  display: flex;
+}
 .sidebar {
     padding-right: 12px;
     padding-left: 12px;
@@ -106,7 +111,7 @@ list-style: none;
     color: #160c18;
      display: flex;     
   align-items: center;
-  gap: 10px;       
+  gap: 20px;       
   margin-bottom: 10px;
   
 } 
@@ -124,12 +129,12 @@ list-style: none;
 
 
 .title-tech-skills{
-    margin-top: 36px;
+    margin-top: 48px;
     font-family: var(--secondary-font);
     font-size: 20px;
     line-height: 1.17;
     letter-spacing: 0.03em;
-    margin-bottom: 20px;
+    margin-bottom: 48px;
     color: var(--primary-text-color);
     text-align: center;
     box-shadow: 0 4px 6px rgba(0,0,0,0.2);
@@ -147,16 +152,16 @@ list-style: none;
 }
 
 .item-tech-skills:not(:last-child) {
-    margin-bottom: 4px;
+    margin-bottom: 10px;
    
 }
 .title-soft-skills{
-    margin-top: 36px;
+    margin-top: 48px;
     font-family: var(--secondary-font);
     font-size: 20px;
     line-height: 1.17;
     letter-spacing: 0.03em;
-    margin-bottom: 20px;
+    margin-bottom: 48px;
     color: var(--primary-text-color);
     text-align: center;
     box-shadow: 0 4px 6px rgba(0,0,0,0.2);
@@ -172,7 +177,7 @@ list-style: none;
 }
 
 .item-soft-skills:not(:last-child) {
-    margin-bottom: 4px;
+    margin-bottom: 10px;
    
 }
 
@@ -184,7 +189,7 @@ list-style: none;
     font-size: 20px;
     line-height: 1.17;
     letter-spacing: 0.03em;
-    margin-bottom: 20px;
+    margin-bottom:48px;
     color: var(--primary-text-color);
     text-align: center;
     box-shadow: 0 4px 6px rgba(0,0,0,0.2);
@@ -198,7 +203,10 @@ list-style: none;
     color: var(--secondary-text-color);
  
 }
-
+.item-languages:not(:last-child) {
+    margin-bottom: 10px;
+   
+}
 
 /* about */
 
